fix: configure enviroments

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poe.tasks]
-dev = "uvicorn main:app --reload --app-dir src"
+dev = "uvicorn main:app --reload --app-dir src --host 0.0.0.0 --port 8000 --reload"
 test = "pytest"
 db-generate = "alembic revision --autogenerate"
 db-migrate = "alembic upgrade head"
