--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,19 @@
+# Entorno
+ENV_STATE=development
+
 # Credenciales para la base de datos de Desarrollo
 POSTGRES_USER=dev_user
 POSTGRES_PASSWORD=supersecretdevpassword
-POSTGRES_DB=pae-auth-db-development
+POSTGRES_DB=pae-auth-db
 
-# Puerto en la máquina HOST
-DB_HOST=db-dev
+# Puerto y host en la maquina
+DB_HOST=pae-rh-db
 DB_HOST_PORT=5432
 
+# Prefijo usado
 API_PREFIX_STR='/api/v1'
-API_ENV="development"
+MODULE_IDENTIFIER= "nutripae-rh"
+
+NUTRIPAE_AUTH_HOST=pae-auth-api
+NUTRIPAE_AUTH_PORT=8000
+NUTRIPAE_AUTH_PREFIX="/api/v1"
