--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "psycopg2-binary (>=2.9.10,<3.0.0)",
     "pydantic-settings (>=2.10.1,<3.0.0)",
     "pydantic[email] (>=2.9.1,<3.0.0)",
-    "alembic (>=1.16.2,<2.0.0)"
+    "alembic (>=1.16.2,<2.0.0)",
+    "httpx (>=0.27.0,<1.0.0)"
 ]
 
 [tool.poetry]
@@ -26,7 +27,6 @@ pre-commit = "^4.2.0"
 poethepoet = "^0.34.0"
 faker = "^26.0.0"
 pytest = "^8.3.2"
-httpx = "^0.27.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
