--- a/.env.example
+++ b/.env.example
@@ -4,10 +4,10 @@ ENV_STATE=development
 # Credenciales para la base de datos de Desarrollo
 POSTGRES_USER=dev_user
 POSTGRES_PASSWORD=supersecretdevpassword
-POSTGRES_DB=pae-auth-db
+POSTGRES_DB=nutripae-rh-db
 
 # Puerto y host en la maquina
-DB_HOST=pae-rh-db
+DB_HOST=nutripae-rh-db
 DB_HOST_PORT=5432
 
 # Prefijo usado
