--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Entorno
 ENV_STATE=development
+APP_NAME="nutripae-recursos-humanos-backend"
 
 # Credenciales para la base de datos de Desarrollo
 POSTGRES_USER=dev_user
@@ -17,3 +18,5 @@ MODULE_IDENTIFIER= "nutripae-rh"
 NUTRIPAE_AUTH_HOST=pae-auth-api
 NUTRIPAE_AUTH_PORT=8000
 NUTRIPAE_AUTH_PREFIX="/api/v1"
+
+OTLP_GRPC_ENDPOINT="http://tempo:4317"
