--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,17 @@ dependencies = [
     "pydantic-settings (>=2.10.1,<3.0.0)",
     "pydantic[email] (>=2.9.1,<3.0.0)",
     "alembic (>=1.16.2,<2.0.0)",
-    "httpx (>=0.27.0,<1.0.0)"
+    "httpx (>=0.27.0,<1.0.0)",
+    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
+    "passlib (>=1.7.4,<2.0.0)",
+    "bcrypt (==3.2.0)",
+    "python-multipart (>=0.0.20,<0.0.21)",
+    "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)",
+    "prometheus-client (==0.20.0)",
+    "opentelemetry-distro (==0.45b0)",
+    "opentelemetry-instrumentation-fastapi (==0.45b0)",
+    "opentelemetry-instrumentation-logging (==0.45b0)",
+    "opentelemetry-exporter-otlp (==1.24.0)"
 ]
 
 [tool.poetry]
